# ForgeSDLC

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.langfuse.yml  docker-compose.yml
.claude/commands/: nova-fatia.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 1443ad845c22_schema_inicial_prd_secao_5.py  a1b2c3d4e5f6_project_notes_fatia_ex01.py  b7e4a1c9d2f3_trigger_imutabilidade_rn_aprovada.py  c3f8b2a15d47_motivo_em_business_rules.py  d5a9c1e83b62_dossie_em_runs.py  e6f2b48a91c5_package_md_em_slices.py  f7a3c92b6e10_llm_calls_metricas_por_estagio.py
apps/api/src/: __init__.py  auth.py  budget.py  config.py  db.py  embeddings.py  eval_harness.py  execucao.py  ingest.py  instructions.py  llm.py  main.py  metrics.py  observability.py  ratelimit.py  routes.py  schemas.py  security.py  services.py  services_grill.py  services_regras.py
apps/api/src/agents/: __init__.py  arquitetura.py  fatiador.py  grill.py  historias.py  regras.py  schemas.py
apps/api/src/graph/: __init__.py  e5_pipeline.py  fatias_pipeline.py  historias_pipeline.py  pipeline.py  regras_pipeline.py
apps/api/src/models/: __init__.py  tables.py
apps/api/src/tools/: __init__.py  rag_busca.py
apps/api/tests/: test_anotacoes.py  test_budget.py  test_cors.py  test_e5.py  test_estagios_assincronos.py  test_eval.py  test_execucao.py  test_fatias.py  test_grill_persistencia.py  test_health.py  test_imutabilidade_rn.py  test_ingest.py  test_instructions.py  test_llm_langfuse.py  test_llm_routing.py  test_matriz_rastreio.py  test_metrics.py  test_rag_busca.py  test_regras_codigos.py  test_seguranca.py  test_supersede_rn.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/app/: E5Panel.tsx  FatiasPanel.tsx  GrillPanel.tsx  HistoriasPanel.tsx  MetricsPanel.tsx  NotesPanel.tsx  RegrasPanel.tsx  layout.tsx  page.tsx
apps/web/lib/: api.test.ts  api.ts  health.test.ts  health.ts  useEstagio.ts
docs/: FASES.md  PRD.md  openapi.json
docs/adr/: ADR-001-embeddings-fastembed.md
docs/fatias/: F-EX01-anotacoes-do-projeto.md  README.md
instructions/: analista_requisitos.md  arquiteto_stack.md  consolidador_regras.md  contestacao.md  critico_regras.md  designer_testes.md  extrator_regras.md  fatiador.md  grill_me.md  refinador_regras.md
scripts/: eval.py  export_openapi.py  tunel-api.bat
