[project]
name = "forge-api"
version = "0.1.0"
description = "Forge SDLC — orquestração dos agentes (FastAPI + LangGraph)"
requires-python = "==3.11.*"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "fastembed>=0.4",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "langgraph>=0.2",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    # langfuse>=3: integração langchain vive em `langfuse.langchain`
    # (no v2 era `langfuse.callback`, API incompatível com src/llm.py).
    "langfuse>=3",
    "psycopg-pool>=3.2",
    # `langchain` (meta-pacote) é exigido pelo CallbackHandler do langfuse,
    # que faz `import langchain` só para checar a versão.
    "langchain>=1",
    # Logging estruturado em JSON com contextvars (Fase 7 / observabilidade).
    "structlog>=24.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.6",
]
# Avaliação offline (Fase 7): pesado e só usado por scripts/eval.py e pelo job
# noturno do CI. Fora do runtime da API. Instalar com `uv sync --group eval`.
eval = [
    "deepeval>=1.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Código gerado pelo Alembic não é lintado.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: Depends()/File()/Form() em defaults é o padrao idiomatico do FastAPI.
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
